# development

./: .gitignore  Makefile.am  NEWS  README  autogen.sh  configure.ac
_site/: index.html
_site/about/: index.html
_site/contact/: index.html
_site/develop/: index.html
data/names/: readme.txt
legacy/: Makefile.am  config.cpp  config.h  liblegacy2345.h  random.cpp  random.h
legacy/character/: Makefile.am  namegenerator.cpp  namegenerator.h  sexuality.cpp  sexuality.h  sexualityconfig.h
m4/: gtest.m4
test/: Makefile.am  main.cpp  test_config.cpp  test_random.cpp  test_sexuality.cpp
tools/: Makefile.am  test_name_generation.cpp
