#
# @file configure.ac
# @brief autoconf recipe for the Legacy project
#
# Copyright 2011,2015 Stephen M. Webb  <stephen.webb@bregmasoft.ca>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#

AC_PREREQ(2.67)
AC_COPYRIGHT([Copyright 2015 Stephen M. Webb  <stephen.webb@bregmasoft.ca>])
AC_INIT([Legacy 2345],
        [0.2.0],
        [stephen.webb@bregmasoft.ca],
        [legacy2345],
        [http://legacy2345.github.io/development/]])
AC_CONFIG_AUX_DIR([config.aux])
AM_INIT_AUTOMAKE([1.11 gnu -Wall color-tests])
AM_SILENT_RULES([yes])
AC_CONFIG_HEADER([legacy_config.h])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
